# spark-databricks-utility-hub

./: .gitignore  README.md  databricks.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  deploy.yml
bundle/: dev.yml  prod.yml
bundle/resources/: clusters.yml  jobs.yml
bundle/templates/: serverless_jobs.yml
jar-utils/: build.gradle  settings.gradle
jar-utils/src/main/java/com/company/utils/: CryptoIndicators.java  DateUtils.java  DeltaHelpers.java  MarketAnalysisUtils.java  ValidationUtils.java
jar-utils/src/test/java/com/company/utils/: CryptoIndicatorsTest.java  ValidationUtilsTest.java
src/: __init__.py
src/common/: __init__.py  config_loader.py  delta_utils.py  logger.py  spark_session.py  validation.py
src/configs/: dev.yaml  prod.yaml
src/jobs/: __init__.py  crypto_market_analysis.py  etl_job.py  s3_ingest_job.py  streaming_job.py
tests/: conftest.py  test_crypto_market_analysis.py  test_delta_utils.py  test_s3_ingest_job.py  test_validation.py
